package org.uade.ejercicioInstituto.curso;

public enum Turno {
    Manana, Tarde, Noche;
}
